--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=P2P
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:aQYKpOkHTUp+aSU4boNCvl+KgfpdGM0v7NcYbjnul5E=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_FRONTEND_URL=http://localhost
@@ -13,7 +13,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=p2p
 DB_USERNAME=root
 DB_PASSWORD=
 DB_ENGINE=InnoDB
