--- a/backend/.env.example
+++ b/backend/.env.example
@@ -32,13 +32,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=8a729eeb34fc32
+MAIL_PASSWORD=e1eed2fd6e6cba
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="p2p@gmail.com"
+MAIL_FROM_NAME="p2p money receiver"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
